# deck-optim

./: Cargo.toml  DEVNOTES.md  README.md
data/: annotations.json  bolt-mountain-collection.json  edh-collection.json  edh-deck.json
src/: card.rs  card_cache.rs  cli.rs  collection.rs  deck.rs  experiment.rs  file_utils.rs  game.rs  lib.rs  main.rs  mana.rs  metrics.rs  opt_utils.rs  strategies.rs  trial.rs  watcher.rs
src/collection/: card_cache.rs  card_source.rs
src/game/: annotations.rs  card.rs  card_play.rs  mana.rs  mod.rs  ordered_pile.rs  state.rs  unordered_pile.rs
src/game/mana/: cost.rs  macros.rs  mana_source.rs  pool.rs  type.rs
src/scryfall/: client.rs  convert.rs  error.rs  mod.rs  types.rs
src/strategies/: card_play_strategies.rs  payment_solver.rs
