[package]
name = "deck-optim"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_derive = "4.5"
itertools = "0.13.0"
linear-map = "1.2.0"
linearmap = "0.0.3"
log = "0.4.22"
once_cell = "1.20.2"
prettytable-rs = "0.10.0"
rand = "0.8.5"
rayon = "1.10.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.134"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["std"] }
